--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
     font-size: medium;
     color: white;
     margin: 0;
-    background: url(Tlo.png);
+    background: url("assets/img/Tlo.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 2000px;
