--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
     font-size: medium;
     color: white;
     margin: 0;
-    background-image: #221401;
+    background-color: #221401;
     background-position: center;
     background-repeat: no-repeat;
     background-size: 2000px;
