--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,8 @@ body {
     text-align:center;
     font-family:'Cinzel';
     font-size: medium;
-    color: white;
     margin: 0;
-    background-color: #221401 !important;
+    background-color: #221401;
     background-position: center;
     background-repeat: no-repeat;
     background-size: 2000px;
