--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,9 @@ body {
     color: white;
     margin: 0;
     background-image: linear-gradient(to bottom, #382102, black);
-    background-repeat: no-repeat
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 #Menu {
     position: fixed;
