--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
     color: white;
     margin: 0;
     background-image: linear-gradient(to bottom, #382102, black);
-    background-size: 100% 100%;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 #Menu {
