--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,16 +238,16 @@ a.element_4:active {
     }
 }
 @media only screen and (max-width: 900px) {
-    p[class*=Cytat] {
+    p[class*=Cytat1] {
     margin-right: 50px;
     }
 }
 @media only screen and (max-width: 800px) {
-    p[class*=Cytat] {
+    p[class*=Cytat1] {
     margin-right: 30px;
     }
 }
-p[class*=Cytat] {
+p[class*=Cytat1] {
     margin-left: 8%;
 }
 [class=Cytat2] {
