--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,20 +237,18 @@ a.element_4:active {
         margin-left: 60px;
     }
 }
-@media only screen and (max-width: 900px) {
-    p[class*=Cytat1] {
+@media only screen and (max-width: 900px)
+    [class=Cytat1] {
     margin-right: 50px;
     }
-}
-@media only screen and (max-width: 800px) {
-    p[class*=Cytat1] {
+@media only screen and (max-width: 800px)
+    [class=Cytat1] {
     margin-right: 30px;
     }
-}
-p[class*=Cytat1] {
+    [class=Cytat1] {
     margin-left: 8%;
 }
-[class=Cytat2] {
+    [class=Cytat2] {
     color: #fddd26;
 }
 h1 {
